Nginx_Ingress_Deployments/App_Deployment_01.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment1
  namespace: ingress-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx1
  template:
    metadata:
      labels:
        app: nginx1
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service1
  namespace: ingress-nginx
spec:
  type: ClusterIP
  selector:
    app: nginx1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
